parkinglot  : Add administration component

--- a/UI/src/app/navbar/navbar.component.html
+++ b/UI/src/app/navbar/navbar.component.html
@@ -17,25 +17,13 @@
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['/dashboard']">Home </a>
         </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            data-toggle="dropdown"
-            role="button"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            Administration
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item">Capacity</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item">Pricing</a>
-          </div>
-        </li>
         <li class="nav-item" *ngIf="this.showVehicleLog">
           <a class="nav-link" [routerLink]="['/vehiclelog']">Scan Vehicle</a>
+        </li>
+        <li class="nav-item" *ngIf="this.showAdministration">
+          <a class="nav-link" [routerLink]="['/administration']"
+            >Administration</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="login" (click)="logout()">Logout</a>
